Option --enable-preview is no longer needed