@@ -157,7 +157,6 @@
                         <quiet>true</quiet>
                         <detectLinks>true</detectLinks>
                         <linksource>false</linksource>
-                        <additionalOptions>--enable-preview</additionalOptions>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -279,9 +278,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefire-plugin.version}</version>
-                <configuration>
-                    <argLine>--enable-preview</argLine>
-                </configuration>
             </plugin>
 
             <!-- Make a jar archive -->
